--- a/cinema/app/build.gradle
+++ b/cinema/app/build.gradle
@@ -36,7 +36,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
@@ -51,5 +50,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.github.sparrow007:carouselrecyclerview:1.2.6'
     implementation 'com.github.bumptech.glide:glide:4.15.0'
-
+    implementation('androidx.core:core-splashscreen:1.0.0')
 }
