--- a/cinema/app/src/main/AndroidManifest.xml
+++ b/cinema/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.cartelera.Datos" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
