Fixed cartelera, added icons inicio sesion

--- a/cinema/app/src/main/AndroidManifest.xml
+++ b/cinema/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.cartelera.Datos" />
+        <activity android:name=".ui.cartelera.Datos"
+            android:theme="@style/Theme.AppCompat"/>
 
         <meta-data
             android:name="preloaded_fonts"
