Avance Horarios y Ratings

--- a/cinema/app/src/main/AndroidManifest.xml
+++ b/cinema/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -10,29 +10,35 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.SplashCinema"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".ratingCelda"
+            android:exported="false" />
+        <activity
+            android:name=".ui.cartelera.celdaRating"
+            android:exported="false" />
         <activity
             android:name=".ui.RegistrarseActivity"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat"/>
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:theme="@style/Theme.SplashCinema"
-            />
+            android:theme="@style/Theme.SplashCinema" />
         <activity
             android:name=".ui.InicioSesionActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat"
-            >
+            android:theme="@style/Theme.AppCompat" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.cartelera.Datos" />
+        <activity
+            android:name=".ui.cartelera.Datos"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
 
         <meta-data
             android:name="preloaded_fonts"
