--- a/cinema/app/src/main/AndroidManifest.xml
+++ b/cinema/app/src/main/AndroidManifest.xml
@@ -12,12 +12,6 @@
         android:theme="@style/Theme.SplashCinema"
         tools:targetApi="31" >
         <activity
-            android:name=".ratingCelda"
-            android:exported="false" />
-        <activity
-            android:name=".ui.cartelera.celdaRating"
-            android:exported="false" />
-        <activity
             android:name=".ui.RegistrarseActivity"
             android:exported="false"
             android:theme="@style/Theme.AppCompat" />
@@ -36,15 +30,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<<<<<<< HEAD
         <activity
             android:name=".ui.cartelera.Datos"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
-=======
-        <activity android:name=".ui.cartelera.Datos"
-            android:theme="@style/Theme.AppCompat"/>
->>>>>>> a9d29e266fad98c4f22f5adb92435dca2022922d
-
+        <activity
+            android:name=".ui.cartelera.Horarios"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity
+            android:name=".ui.cartelera.ratingCelda"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
