--- a/cinema/build.gradle
+++ b/cinema/build.gradle
@@ -1,6 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    ext {
+        compose_version = "1.4.0-alpha05"
+    }
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.4.0' apply false
+    id ('com.google.gms.google-services') version '4.3.15' apply false
     id 'com.android.library' version '7.4.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
 }
