--- a/cinema/app/build.gradle
+++ b/cinema/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
     implementation 'com.github.sparrow007:carouselrecyclerview:1.2.6'
     implementation 'com.github.bumptech.glide:glide:4.15.0'
     implementation('androidx.core:core-splashscreen:1.0.0')
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
 }
